<resources>
    <string name="app_name">Bill_Slip_initial</string>
    <string name="camera_suggest_string">Open camera to take image</string>
    <string name="Open_Camera">Click to open camera</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="current_string">Current</string>
    <string name="total_string">total</string>
    <string name="general_store">General Store</string>
    <string name="address">Address</string>
    <string name="contact_string">Ph: 9999999999 | Email: abc@gmail.com</string>
    <string name="date">Date : 15/04/2021</string>
    <string name="gst">GST No. ABC1234</string>
    <string name="clear_bill">Clear Bill</string>
    <string name="s_no">S No.</string>
    <string name="items">Items</string>
    <string name="price">Price</string>
    <string name="txt_total">Total</string>
    <string name="zero">0</string>
    <string name="grand_total">Grand Total</string>
    <string name="no_items_to_show">No items to show</string>
    <string name="customers_number">Customer\'s Number</string>
    <string name="invoice">Share Invoice</string>
    <string name="enter_number_hint">Enter Number</string>
</resources>